MSDK-892 Added KlarnaSignInManager native module for Android in new architecture